--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "description": "My Rest Api Project",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [
     "simple",
     "api",
-    "rest",
-    "api"
+    "rest"
   ],
   "author": "Zeltoria",
   "license": "ISC",
@@ -36,5 +34,5 @@
     "request": "^2.88.2",
     "scraper-jsc": "^0.0.3",
     "ssl-express-www": "^3.0.7"
-  },
+  }
 }
